# ciMIST

./: .README.md.swp  .gitignore  .pylintrc  README.md  pyproject.toml  quick_test.sh  test_Devin.md
data/CRIPT_tree/: RESULTS_ciMIST.pkl  logging.txt
data/CRIPT_tree/pymol/: colorbar.pkl  draw_tree.pml
examples/: CRIPT.ipynb
output/_seed_0/: logging.txt
pymol_palettes/: cmasher.json  cmocean.json  pymol_palettes.py  spectra.json
src/cimist/: __init__.py  dataloader.py  entropy.py  fit.py  io.py  mist.py  mpnn.py
src/cimist/ci/: __init__.py  dbscan.py  mpnn.py  mpnn_states.py  vmm.py
src/cimist/pymol/: __init__.py  defaults.pml  pymol.py
src/cimist/utils/: __init__.py  chunked_vmap.py  sharding.py  trajectory.py
src/cimist/utils/nerfax/: __init__.py  host_callback_utils.py  parser.py  plugin.py  reconstruct.py  utils.py
templates/: analysis_template.ipynb
